<resources>
    <string name="app_name">أكلني</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_meal">MealActivity</string>
    <string name="google_maps_key">AIzaSyBGNxSuwyPExMwRGFTQqEOeueU4EjJ4CVs</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="must_enter">مطلــــــــوب</string>
    <string name="should_enter">اختيـــــاري</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="facebook_app_id">1998875033769692</string>
    <string name="fb_login_protocol_scheme">fb1998875033769692</string>
    <string name="cancel">ألغاء</string>
    <string name="ok">موافق</string>
    <string name="D_message">سيتم الغاء جميع الاوردرات يرجى تأكيد الأوردر</string>
    <string name="info">أكلني باختصار مش هتحتاج رصيد تاني كل اللي محتاجه داتا وكمان مش بنسحب من الباقه \n احنا بنوفرلك مطاعم بنس سويف كلها بالمنيو بتاعها ف ايدك \n شعارنا الاستكنيصه والراحه يعني مش هتعب نفسي كل اللي هعمله هفتح الاب اختار المطعم وادوس اكلني \n احنا بنوفرلك ف الوقت الجهد الرصيد  </string>
    <string name="followus">تواصل معنا</string>
    <string name="internet_connection">تأكد من اتصال الانترنت لديك</string>
    <string name="phone1">01024975966</string>
    <string name="phone2">01278788906</string>
    <string name="phone3">01156826156</string>
    <string name="splaj">اطلب اكلك </string>
    <string name="splaj2">من فونك</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
