<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aklni.islammahoud.aklnii.Fragments.AboutusFra"
    android:layoutDirection="rtl">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/info"
            android:textColor="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="26dp"
            android:background="@drawable/login_button"
            android:text="@string/followus"
            android:textColor="@color/text"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginRight="20dp">
            <ImageView
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:src="@mipmap/face"
                android:layout_margin="10dp"/>
            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:src="@mipmap/arrow"
                android:layout_margin="10dp"
                android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/fa_follow"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:src="@mipmap/aklniring"
            android:layout_margin="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:src="@mipmap/phonenum"
                android:layout_margin="10dp"
                android:layout_gravity="top"/>
            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:src="@mipmap/arrow"
                android:layout_margin="10dp"
                android:layout_gravity="top" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone1"
                    android:layout_margin="5dp"
                    android:textColor="@color/item"
                    android:textSize="18dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone2"
                    android:layout_margin="5dp"
                    android:textColor="@color/item"
                    android:textSize="18dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone3"
                    android:layout_margin="5dp"
                    android:textColor="@color/item"
                    android:textSize="18dp"
                    android:layout_gravity="center"/>
                    <ImageView
                        android:layout_height="20dp"
                        android:layout_width="20dp"
                        android:src="@drawable/whats"
                        android:layout_margin="10dp"
                        android:layout_gravity="top"/>
                    </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
